--- a/hw3/shoe-area.html
+++ b/hw3/shoe-area.html
@@ -3,6 +3,12 @@
 <head>
 	<title>My House</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<style type="text/css">
+		.door-size:hover {
+		    transform: scale(1.5);
+		    transition:all 3s;
+		 }
+	</style>
 </head>
 <body style="background-color: #795548; color: #0a0808">
 	<div class="center">
